# compiler-Project-ISEP

./: .gitignore  CMakeLists.txt  phase3parser  read.txt  test.txt
Include/: ast.hpp  codegen.hpp  ir.hpp  parser.hpp  tokens.hpp
src/: codegen.cpp  ir.cpp  main.cpp  parser.cpp  scanner.cpp  scanner.lx
